# deimos

./: .envrc  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
deimos/: Cargo.toml  justfile
deimos/migrations/: 20230627001100_create_the_initial_database.sql
deimos/src/: action.rs  app.rs  artist_album_list.rs  config.md  create_db.sql  decoder.rs  library.rs  library_panel.rs  main.rs  now_playing.rs  play_state.rs  player.rs  spectrogram.rs  track_list.rs  ui.rs
deimos/src/audio/: mod.rs  reader.rs
deimos/src/ui/: artist_album_list.rs  mod.rs  now_playing.rs  search.rs  spectrogram.rs  track_list.rs
mimi/: Cargo.toml  LICENSE  README.md
mimi/src/: format.rs  grammar.pest  lib.rs  parse.rs  style.rs
mimi/src/examples/: demo.rs
src/: app.rs  config.md  config.rs  events.rs  lib.rs  library.rs  library_panel.rs  main.rs  mpris.rs
src/audio/: mod.rs  play_queue.rs  reader.rs
src/ui/: album_art.rs  artist_album_list.rs  mod.rs  now_playing.rs  search.rs  spectrogram.rs  track_list.rs
src/widgets/: album_tree.rs  app.rs  mod.rs  now_playing.rs  queue.rs
