[package]
name = "catgirl"
version = "0.1.0"
authors = ["Ash <relativistic.policeman@gmail.com>"]
edition = "2018"
homepage = "http://github.com/deifactor/catgirl"
repository = "http://github.com/deifactor/catgirl"

[dependencies]
base64 = "0.10"
failure = "0.1"
id3 = "0.2"
maplit = "1.0"
mimi = { path = "./mimi", features = ["to_tui"] }
mpd = "0.0.12"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
termion = "1.5"
time = "0.1"
toml = "0.4"
tui = "0.3"
dirs = "1.0"

[workspace]
members = [
    "mimi",
]