[package]
name = "catgirl"
version = "0.1.0"
authors = ["Ash <ext0l@catgirl.ai>"]
edition = "2021"
homepage = "http://github.com/deifactor/catgirl"
repository = "http://github.com/deifactor/catgirl"

[dependencies]
failure = "0.1"
maplit = "1.0"
mimi = { path = "./mimi", features = ["to_tui"] }
structopt = "0.2"
termion = "1.5"
toml = "0.4"
tui = { package = "ratatui", version = "0.21.0" }
dirs = "1.0"
rodio = { version = "0.17.1", features = ["symphonia-all"], default-features = false }
crossterm = "0.26.1"
serde = { version = "1.0.164", features = ["derive"] }

[workspace]
members = [
    "mimi",
]
