[package]
name = "deimos"
version = "0.1.0"
authors = ["Ash <ext0l@catgirl.ai>"]
edition = "2021"
homepage = "http://github.com/deifactor/deimos"
repository = "http://github.com/deifactor/deimos"
default-run = "deimos"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
cpal = "0.15.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
educe = { version = "0.5.11", default-features = false, features = ["Debug"] }
env_logger = "0.11.0"
eyre = "0.6.11"
fastrand = "2.0.1"
fragile = "2.0.0"
image = { version = "0.24.8", default-features = false, features = ["png", "jpeg_rayon", "jpeg"] }
itertools = "0.12.0"
lofty = "0.18.0"
log = "0.4.20"
mpris-server = "0.6.0"
nucleo-matcher = "0.3.0"
once_cell = "1.19.0"
ordered-float = { version = "4.1.1", features = ["serde"] }
palette = "0.7.4"
quantette = "0.1.1"
ratatui = { version = "0.26.0", features = ["macros"] }
ratatui-image = { version = "0.8.0", default-features = false, features = ["rustix"] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.108"
smol = "2.0.0"
smol-macros = "0.1.0"
spectrum-analyzer = "1.5.0"
symphonia = { version = "0.5.3", features = ["all"] }
tap = "1.0.1"
unicode-width = "0.1.11"
walkdir = "2.4.0"

# Build our dependencies optimized, but ourselves in dev mode. This is
# important because we're using audio libraries.
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.deimos]
opt-level = 0
[profile.dev]
lto = false

[patch.crates-io]
ratatui-image = { git = 'https://github.com/deifactor/ratatui-image/', branch = 'filter-type'}
mpris-server = { git = 'https://github.com/SeaDve/mpris-server/', branch = 'afit' }
