[package]
name = "deimos"
version = "0.1.0"
authors = ["Ash <ext0l@catgirl.ai>"]
edition = "2021"
homepage = "http://github.com/deifactor/deimos"
repository = "http://github.com/deifactor/deimos"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
cpal = "0.15.2"
crossterm = { version = "0.26.1", features = ["event-stream"] }
directories = "5.0.1"
educe = { version = "0.4.23", default-features = false, features = ["Debug"] }
enum-iterator = "1.4.1"
env_logger = "0.10.0"
itertools = "0.11.0"
lofty = "0.15.0"
log = "0.4.20"
ordered-float = { version = "4.1.1", features = ["serde"] }
ratatui = { version = "0.24.0", features = ["macros"] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.108"
spectrum-analyzer = "1.4.0"
symphonia = { version = "0.5.3", features = ["all"] }
tap = "1.0.1"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
walkdir = "2.3.3"
