[package]
name = "mimi"
version = "0.1.0"
authors = ["Ash <relativistic.policeman@gmail.com>"]
edition = "2018"

[dependencies]
maplit = "^1.0"
pest = "^2.1"
pest_derive = "^2.1"
termion = "^1.5"
tui = "0.3"

[dev-dependencies]
# Necessary for the demo binary.
failure = "^0.1"
structopt = "0.2"

[features]
default = []
to_tui = []


[[example]]
name = "demo"
path = "src/examples/demo.rs"
