[package]
name = "mimi"
version = "0.1.1"
authors = ["Ash <relativistic.policeman@gmail.com>"]
edition = "2018"
description = "A library for terminal-oriented runtime string formatting and interpolation."
keywords = ["formatting", "terminal", "tui"]
categories = ["command-line-interface", "value-formatting"]
license = "MIT"
repository = "http://github.com/deifactor/catgirl/mimi"
readme = "README.md"

[badges]
travis-ci = { repository = "deifactor/catgirl", branch = "mistress" }

[dependencies]
maplit = "^1.0"
pest = "^2.1"
pest_derive = "^2.1"
termion = "^1.5"
tui = { version = "0.3", optional = true }

[dev-dependencies]
# Necessary for the demo binary.
failure = "^0.1"
structopt = "0.2"

[features]
default = []
to_tui = ["tui"]


[[example]]
name = "demo"
path = "src/examples/demo.rs"
