[package]
name = "mimi"
version = "0.1.2"
authors = ["Ash <ext0l@catgirl.ai>"]
edition = "2021"
description = "A library for terminal-oriented runtime string formatting and interpolation."
keywords = ["formatting", "terminal", "tui"]
categories = ["command-line-interface", "value-formatting"]
license = "MIT"
homepage = "https://github.com/deifactor/catgirl/tree/main/mimi"
repository = "http://github.com/deifactor/catgirl"
readme = "README.md"

[badges]
travis-ci = { repository = "deifactor/catgirl", branch = "main" }

[dependencies]
maplit = "^1.0"
pest = "^2.1"
pest_derive = "^2.1"
termion = "^1.5"
tui = { version = "0.3", optional = true }

[dev-dependencies]
# Necessary for the demo binary.
failure = "^0.1"
structopt = "0.2"

[features]
default = []
to_tui = ["tui"]


[[example]]
name = "demo"
path = "src/examples/demo.rs"
